wsdf/tests/should_fail/union.stderr
error: only structs can derive Protocol
 --> tests/should_fail/union.rs:6:1
  |
6 | union MyUnion {
  | ^^^^^
